# DistributedDataEncryption

./: CMakeLists.txt  README.md  main.cpp
include/: chunk.h  config.h  crypto.h  dropbox_client.h  encryption.grpc.pb.cc  encryption.grpc.pb.h  encryption.pb.cc  encryption.pb.h  encryption.proto  master.h  utilities.h  worker.h
src/: chunk.cpp  crypto.cpp  dropbox_client.cpp  master.cpp  utilities.cpp  worker.cpp
ui/: index.html  install.bat  main-simple.js  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
